# ark

./: .gitignore  Cargo.toml  README.md  fastly.toml  schema.sql
src/: main.rs
src/app/: arc.rs  ark.rs  mod.rs
src/app/adapter/: mod.rs  oauth_adapter.rs
src/app/database/: mod.rs  postgres.rs  redis.rs
src/app/platform/: cache.rs  mod.rs  response.rs
src/app/platform/iam/: mod.rs  response.rs  role.rs  user.rs
src/app/platform/iam/auth/: integrity.rs  manager.rs  mod.rs  route.rs
src/app/platform/iam/permission/: cache.rs  manager.rs  mod.rs  model.rs  task.rs
src/app/platform/iam/role/: cache.rs  manager.rs  mod.rs  model.rs  task.rs
src/app/platform/iam/session/: manager.rs  mod.rs  model.rs  task.rs
src/app/platform/iam/user/: cache.rs  manager.rs  mod.rs  model.rs  route.rs  task.rs  validation.rs  worker.rs
src/app/sector/: mod.rs  sector.rs
src/app/sector/iam/: auth.rs  mod.rs  root.rs  test.rs
src/app/service/: mod.rs  worker.rs
src/app/service/auth/: integrity.rs  mod.rs
src/app/service/auth/provider/: discord.rs
src/app/service/bridge/: error.rs  mod.rs  model.rs  send.rs
src/app/service/cache/: error.rs  manager.rs  message.rs  mod.rs  model.rs
src/app/service/event/: mod.rs
src/app/service/iam/: auth.rs  error.rs  mod.rs  permission.rs  provider.rs  role.rs  route.rs  user.rs
src/app/service/iam/access/: mod.rs  model.rs  permission.rs  role.rs
src/app/service/iam/account/: error.rs  mod.rs  model.rs  repository.rs
src/app/service/iam/auth/: integrity.rs  mod.rs  user.rs
src/app/service/session/: mod.rs
src/app/service/task/: error.rs  manager.rs  message.rs  mod.rs
src/app/service/user/: mod.rs
src/app/services/: mod.rs
src/app/services/cache/: error.rs  manager.rs  mod.rs  model.rs
src/app/services/iam/: account.rs  auth.rs  auth_provider.rs  mod.rs  provider.rs
src/app/services/task/: error.rs  manager.rs  mod.rs  model.rs
src/app/utilities/: cache.rs  mod.rs  validation.rs  worker.rs
(+13 files in other folders)
