[package]
name = "arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["query", "json", "tokio"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bb8-redis = "0.14.0"
dashmap = "5.5.3"
once_cell = "1.19.0"
serde_json = "1.0.108"
smallvec = "1.11.2"
tokio = { version = "1.35.0", features = ["full"] }
