[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["query", "json", "tokio"] }
axum-core = "0.4.1"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bb8-redis = "0.14.0"
nanoid = "0.4.0"
oauth2 = "4.4.2"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
