[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.7.2", features = ["query", "json", "tokio"] }
axum-core = "0.4.1"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bb8-redis = "0.14.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.11"
nanoid = "0.4.0"
oauth2 = "4.4.2"
once_cell = "1.19.0"
quote = "1.0.34"
serde = "1.0.193"
serde_json = "1.0.108"
syn = "2.0.44"
thiserror = "1.0.56"
tokio = { version = "1.35.0", features = ["full"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
